examples/test/testpolicy1420.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1420
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key33: value9
      key37: value12
      key8: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value9
      podSelector:
        matchLabels:
          key31: value6
